--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.universAAL</groupId>
 		<artifactId>uAAL.pom</artifactId>
-		<version>1.1.0</version>
+		<version>1.2.0</version>
 	</parent>
 	
 	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>new_services.pom</artifactId>
-	<version>B.1</version>
+	<version>C.0</version>
 	
 	<packaging>pom</packaging>
 	<name>Parent POM for all AAL services</name>
@@ -31,7 +31,7 @@
 		<maven.compile.source>1.5</maven.compile.source>
 		<maven.compile.target>1.5</maven.compile.target>
 		<gforge.project.name>new_services</gforge.project.name>
-		<platform.version>1.1.1-SNAPSHOT</platform.version>
+		<platform.version>1.2.0</platform.version>
 		<service.name.svn></service.name.svn>
 	</properties>
 	
@@ -40,6 +40,20 @@
 			<dependency>
 				<groupId>org.universAAL.middleware</groupId>
 				<artifactId>mw.pom</artifactId>
+				<version>${platform.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.middleware</groupId>
+				<artifactId>mw.pom.core</artifactId>
+				<version>${platform.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.middleware</groupId>
+				<artifactId>mw.pom.osgi</artifactId>
 				<version>${platform.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
