--- a/long_term_behav/drools.reasoner/pom.xml
+++ b/long_term_behav/drools.reasoner/pom.xml
@@ -18,36 +18,35 @@
 			<artifactId>org.osgi.core</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+	<dependency>
+		<groupId>org.universAAL.middleware</groupId>
+		<artifactId>mw.data.representation</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>org.universAAL.middleware</groupId>
+		<artifactId>mw.bus.service</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
+	</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.universAAL.middleware</groupId>-->
+		<!--			<artifactId>mw.bus.io</artifactId>-->
+		<!--			<version>1.0.1-SNAPSHOT</version>-->
+		<!--		</dependency>-->
+				<dependency>
+					<groupId>org.universAAL.middleware</groupId>
+					<artifactId>mw.bus.context</artifactId>
+					<version>1.1.1-SNAPSHOT</version>
+				</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.universAAL.ontology</groupId>-->
+		<!--			<artifactId>ont.profile</artifactId>-->
+		<!--			<version>1.0.1-SNAPSHOT</version>-->
+		<!--		</dependency>-->
 		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.profile</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		<groupId>org.antlr</groupId>
-		
-		<artifactId>antlr</artifactId>
-		<version>3.1.3</version>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr</artifactId>
+			<version>3.1.3</version>
 		</dependency>
 
 		<dependency>
@@ -85,37 +84,41 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.17</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.core</artifactId>
+		</dependency>
 
-            
-<!--		<dependency>-->
-<!--			<groupId>org.codehaus.btm</groupId>-->
-<!--			<artifactId>btm</artifactId>-->
-<!--			<version>1.3.3</version>-->
-<!--		</dependency>-->
+
+		<!--		<dependency>-->
+		<!--			<groupId>org.codehaus.btm</groupId>-->
+		<!--			<artifactId>btm</artifactId>-->
+		<!--			<version>1.3.3</version>-->
+		<!--		</dependency>-->
 <!---->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.aries.jpa</groupId>-->
-<!--			<artifactId>org.apache.aries.jpa.api</artifactId>-->
-<!--			<version>0.3</version>-->
-<!--		</dependency>-->
-<!--		-->
-<!--				<dependency>-->
-<!--			<groupId>org.apache.aries.jpa</groupId>-->
-<!--			<artifactId>org.apache.aries.jpa.container</artifactId>-->
-<!--			<version>0.3</version>-->
-<!--		</dependency>-->
-<!--		-->
-<!--				<dependency>-->
-<!--			<groupId>org.apache.geronimo.specs</groupId>-->
-<!--			<artifactId>geronimo-jpa_2.0_spec</artifactId>-->
-<!--			<version>1.1</version>-->
-<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>org.apache.aries.jpa</groupId>-->
+		<!--			<artifactId>org.apache.aries.jpa.api</artifactId>-->
+		<!--			<version>0.3</version>-->
+		<!--		</dependency>-->
+		<!--		-->
+		<!--				<dependency>-->
+		<!--			<groupId>org.apache.aries.jpa</groupId>-->
+		<!--			<artifactId>org.apache.aries.jpa.container</artifactId>-->
+		<!--			<version>0.3</version>-->
+		<!--		</dependency>-->
+		<!--		-->
+		<!--				<dependency>-->
+		<!--			<groupId>org.apache.geronimo.specs</groupId>-->
+		<!--			<artifactId>geronimo-jpa_2.0_spec</artifactId>-->
+		<!--			<version>1.1</version>-->
+		<!--		</dependency>-->
 <!---->
-<!--		<dependency>-->
-<!--			<groupId>org.osgi</groupId>-->
-<!--			<artifactId>org.osgi.enterprise</artifactId>-->
-<!--			<version>4.2.0</version>-->
-<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>org.osgi</groupId>-->
+		<!--			<artifactId>org.osgi.enterprise</artifactId>-->
+		<!--			<version>4.2.0</version>-->
+		<!--		</dependency>-->
 
 		<!--		<dependency>-->
 		<!--			<groupId>org.hibernate</groupId>-->
@@ -197,9 +200,11 @@
 						</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-<!--						<Import-Package>bitronix.tm.jndi,*</Import-Package>-->
-<!--						<JPA-PersistenceUnits>o</JPA-PersistenceUnits>-->
-<!--						<Meta-Persistence>META-INF/persistence.xml</Meta-Persistence>-->
+						<!--						<Import-Package>bitronix.tm.jndi,*</Import-Package>-->
+						<!--						<JPA-PersistenceUnits>o</JPA-PersistenceUnits>-->
+						<!--
+							<Meta-Persistence>META-INF/persistence.xml</Meta-Persistence>
+						-->
 					</instructions>
 				</configuration>
 			</plugin>
