--- a/aal_eficiency/EnergyReaderPublisher/pom.xml
+++ b/aal_eficiency/EnergyReaderPublisher/pom.xml
@@ -3,15 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-	<groupId>org.universAAL.support.samples</groupId>
-    <artifactId>samples.pom</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
-    <relativePath>../samples.pom</relativePath>
+		<artifactId>new_services.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>D.0</version>
+		<relativePath>../new_services.pom/pom.xml</relativePath>
 	</parent>
 	<packaging>bundle</packaging>
-	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>EnergyReaderPublisher</artifactId>
-	<version>1.2.2-SNAPSHOT</version>
 	<name>Energy Reader Service</name>
 	<url />
 	<dependencies>		
@@ -26,7 +24,6 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.readenergy</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
     	<dependency>
 			    <groupId>org.apache.derby</groupId>
@@ -36,7 +33,6 @@
     	<dependency>
     		<groupId>org.universAAL.ontology</groupId>
     		<artifactId>ont.aalfficiencyscores</artifactId>
-    		<version>1.2.1-SNAPSHOT</version>
     	</dependency>
 	</dependencies>
 	<build>
