--- a/aal_eficiency/FitbitPublisher/pom.xml
+++ b/aal_eficiency/FitbitPublisher/pom.xml
@@ -3,12 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-	<groupId>org.universAAL.support.samples</groupId>
-    <artifactId>samples.pom</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
-    <relativePath>../samples.pom</relativePath>
+		<artifactId>new_services.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>D.0</version>
+		<relativePath>../new_services.pom/pom.xml</relativePath>
 	</parent>
-	<groupId>org.universAAL.AALapplication</groupId>
 	<packaging>bundle</packaging>
 	<artifactId>FitbitPublisher</artifactId>
 	<name>Fitbit Publisher App</name>
@@ -35,12 +34,10 @@
     	<dependency>
     		<groupId>org.universAAL.ontology</groupId>
     		<artifactId>ont.aalfficiencyscores</artifactId>
-    		<version>1.2.1-SNAPSHOT</version>
     	</dependency>
     	<dependency>
     		<groupId>org.universAAL.ontology</groupId>
     		<artifactId>ont.fitbitdata</artifactId>
-    		<version>1.2.1-SNAPSHOT</version>
     	</dependency>
     	<dependency>
 			    <groupId>org.apache.derby</groupId>
