--- a/health/health.treat.manager/pom.xml
+++ b/health/health.treat.manager/pom.xml
@@ -24,10 +24,10 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.health</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.universAAL.AALapplication</groupId>
-			<artifactId>health.profile.manager</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.universAAL.AALapplication</groupId> -->
+<!-- 			<artifactId>health.profile.manager</artifactId> -->
+<!-- 		</dependency> -->
 	</dependencies>
 
 	<build>
