--- a/health/health.performedSession.manager/pom.xml
+++ b/health/health.performedSession.manager/pom.xml
@@ -24,6 +24,10 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.health</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.container.osgi</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
