--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -36,8 +36,8 @@
 		<module>../health.treat.manager</module>
 		<module>../health.biomedicalsensors.server</module>
 		<module>../health.biomedicalsensors.uiclient</module>
-		<!-- module>../health.motivation</module -->
-		<module>../health.manager</module>
+		<module>../health.motivation</module>
+		<module>../health.ui.client</module>
 	</modules>
 
 	<dependencyManagement>
