--- a/ontologies/ont.activity/pom.xml
+++ b/ontologies/ont.activity/pom.xml
@@ -24,6 +24,10 @@
     	<groupId>org.universAAL.ontology</groupId>
     	<artifactId>ont.phWorld</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.universAAL.ontology</groupId>
+    	<artifactId>ont.profile</artifactId>
+    </dependency>
   </dependencies>
  
   <build>
