--- a/nutritional/nutritional.uiclient.basic/pom.xml
+++ b/nutritional/nutritional.uiclient.basic/pom.xml
@@ -56,8 +56,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>medication.manager.ont</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<artifactId>ont.medication</artifactId>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Nutritional own libs -->
