--- a/agenda/agenda.runner/runner/felix/system.properties
+++ b/agenda/agenda.runner/runner/felix/system.properties
@@ -9,8 +9,9 @@ felix.log.level=4
 user.language=en
 osgi.noShutdown=true
 org.universAAL.middleware.peer.is_coordinator=true
-org.universAAL.middleware.peer.member_of=urn:org.universAAL.aal_space:test_env
+org.universAAL.middleware.peer.member_of=urn:org.universAAL.aal_space:test_environment
 bundles.configuration.location=configurations/
+
 felix.upnpbase.exporter.enabled=true
 felix.upnpbase.importer.enabled=true
 felix.upnpbase.cyberdomo.log=false
@@ -20,8 +21,19 @@ felix.upnpbase.cyberdomo.net.onlyIPV6=false
 cyberdomo.ssdp.mx=5
 cyberdomo.ssdp.buffersize=2048
 cyberdomo.ssdp.port=13531
+
+#web handler (ri.servicegateway) listen port
 org.osgi.service.http.port=8088
-#Allows for the specification of the Session life time as a number of minutes. This property serves the same purpose as the session-timeout element in a Web Application descriptor. The default is zero for no timeout at all.
+#mitigates timeout error on web handler: "An existing connection was forcibly closed by the remote host"
 org.apache.felix.http.session.timeout=0
-#Connection timeout in milliseconds. The default is 60000 (60 seconds).
 org.apache.felix.http.timeout=50000
+
+ui.dm.systemMenuProvision=task
+# in miliseconds, no recommended more than 500 miliseconds
+ui.dm.finalizeWait=150
+
+org.universAAL.ucc.viewjambi.rundir=/
+
+#not used
+#felix.fileinstall.poll=15000 
+#felix.fileinstall.dir=configurations/auto
